# MonteCarlo

./: .gitignore
FineTimeNL/: CMakeLists.txt  CMakeUserPresets.json  CSVWriter.h  DistributionGen.hpp  FineTimeMC.hpp  LineDrawer.hpp  MultiNomial.hpp  UniformInserter.hpp  conanfile.txt  configure.sh  main.cxx  plot_err.py  traits.hpp
FineTimeNL/src/: CMakeLists.txt  DistributionGen.hpp  FineTimeMC.cxx  FineTimeMC.hpp  MultiNomial.hpp  Sinker.hpp  UniformInserter.hpp  main.cxx  traits.hpp
